Fixed logout button alignment

--- a/src/app/layout/header/header.component.sass
+++ b/src/app/layout/header/header.component.sass
@@ -25,6 +25,9 @@
     font-size: 14px
     font-weight: 500
 
+.logout-button
+    align-self: center
+
 @media screen and (max-width: 900px)
   .header-container
     display: grid
